Bug 550414 - Use current identity's compose format for mailto: links. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D227526

--HG--
extra : moz-landing-system : lando