mail/base/content/msgHdrView.js
@@ -3232,7 +3232,8 @@ const gMessageHeader = {
   openListURL(event) {
     const url = event.target.value;
     if (url.startsWith("mailto:")) {
-      top.composeEmailTo(url, MailUtils.getIdentityForHeader(gMessage));
+      const [identity] = MailUtils.getIdentityForHeader(gMessage);
+      top.composeEmailTo(url, identity);
       return;
     }
     openUILink(url, event);
